# DungeonMasterBot

./: .gitignore  app.py  character.py  conversation.py  functions.py  indexer.py  mcp_server.py  pyproject.toml  readme.md  requirements.txt  utils.py
bot/: main.py  setup.py
bot/api/: server.py
bot/models/: character.py  conversation.py
bot/utils/: chat.py  functions.py  indexer.py
evals/: __init__.py  results_helper.py  run_tool_call_evals.py  testing_criteria.py
evals/data/: tool_call_samples.jsonl
frontend/chatbot-frontend/: README.md  README_UI.md  package-lock.json  package.json
frontend/chatbot-frontend/public/: index.html
frontend/chatbot-frontend/src/: App.css  App.js  App.test.js  ChatComponent.css  ChatComponent.js  theme.css
frontend/chatbot-frontend/src/components/: ChatWindow.jsx  Composer.jsx  Message.jsx  Sidebar.jsx
tests/: test_character.py
