[project]
name = "dungeonmasterbot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Robert Nasuti", email = "rlnasuti@hotmail.com" }]
dependencies = [
    "faiss-cpu==1.7.4",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "langchain==0.0.308",
    "openai==0.28.1",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.0",
    "tenacity==8.2.3",
    "tiktoken==0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
exclude = ["frontend*"]
